--- a/ClientApp/src/decompose/main.css
+++ b/ClientApp/src/decompose/main.css
@@ -7,12 +7,23 @@
     font-weight: 600;
     padding-left: 1em;
 }
+
+#menu-bar {
+    display: flex;
+    flex-direction: row;
+    font-size: 1.2em;
+    justify-content:space-between;
+    width: 150px;
+
+}
+
 .Good {
     border-color: black;
     border-style: solid;
     border-width: 2.5px 0 2.5px 0;
     display: flex;
     flex-direction: row;
+    padding: 5px;
 }
 
 .GoodsCost {
